reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_external_generic_type_fallback-4.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.basic.TestStructWithExternalGenericTypeFallback"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.basic.TestStructWithExternalGenericTypeFallback"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "i32": {
        "description": "32-bit signed integer",
        "type": "integer"
      },
      "reflectapi_demo.tests.basic.TestStructWithExternalGenericTypeFallback": {
        "type": "object",
        "title": "reflectapi_demo.tests.basic.TestStructWithExternalGenericTypeFallback",
        "required": [
          "data"
        ],
        "properties": {
          "data": {
            "description": "Key-value map type",
            "type": "object",
            "additionalProperties": {
              "$ref": "#/components/schemas/i32"
            }
          }
        }
      }
    }
  }
}
